[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juego/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Juego/HUD/Imgs/player-walk-1.png" type="Texture" id=2]
[ext_resource path="res://Juego/HUD/Imgs/moneda-1.png" type="Texture" id=3]
[ext_resource path="res://Juego/HUD/touch/touch.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 27.4061 ]
}

[node name="score" type="Label" parent="."]
margin_left = 0.263519
margin_right = 34.2635
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "SCORE:"

[node name="vidas" type="Node2D" parent="."]

[node name="vida1" type="Sprite" parent="vidas"]
position = Vector2( 13.1373, 18.1427 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="vida2" type="Sprite" parent="vidas"]
position = Vector2( 27.992, 17.949 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="vida3" type="Sprite" parent="vidas"]
position = Vector2( 43.9837, 17.7206 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Monedas" type="Sprite" parent="."]
position = Vector2( 78.7121, 18.0345 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Score " type="Label" parent="."]
margin_left = 135.559
margin_top = 12.748
margin_right = 178.559
margin_bottom = 26.748
text = "Score: "

[node name="puntuacion" type="Label" parent="Score "]
margin_left = 42.6482
margin_top = 7.62939e-06
margin_right = 82.6482
margin_bottom = 14.0
text = "0"

[node name="monedas" type="Label" parent="."]
margin_left = 90.402
margin_top = 13.1661
margin_right = 130.402
margin_bottom = 27.1661
text = "0"

[node name="touch" parent="." instance=ExtResource( 4 )]
